force-app/main/default/objects/Contact/fields/anonymize__c.field-meta.xml
<CustomField>
    <fullName>anonymize__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set the contact to be anonymize according to GDPR legislation</description>
    <label>Anonymiser</label>
    <type>Checkbox</type>
</CustomField>