force-app/main/default/objects/Contact/fields/Id_contact__c.field-meta.xml
<CustomField>
    <fullName>Id_contact__c</fullName>
    <description>&quot;user friendly&quot; user id</description>
    <externalId>true</externalId>
    <label>Id contact</label>
    <type>AutoNumber</type>
</CustomField>