force-app/main/default/objects/Contact/fields/Number_Yearly_Marketing_Request__c.field-meta.xml
<CustomField>
    <fullName>Number_Yearly_Marketing_Request__c</fullName>
    <label>Nombre de sollicitations par an</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>npsp__Payment_ACH_Code</valueSetName>
    </valueSet>
</CustomField>