force-app/main/default/objects/Contact/fields/sffr_Anonymized__c.field-meta.xml
<CustomField>
    <fullName>sffr_Anonymized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set the contact to be anonymize according to GDPR legislation</description>
    <label>Anonymized</label>
    <type>Checkbox</type>
</CustomField>