force-app/main/default/objects/Contact/fields/sffr_Campaign_origin__c.field-meta.xml
<CustomField>
    <fullName>sffr_Campaign_origin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign of origin</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contacts first campaign</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>