force-app/main/default/objects/Contact/fields/SFFR_ContactID__c.field-meta.xml
<CustomField>
    <fullName>SFFR_ContactID__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>ContactID</label>
    <type>AutoNumber</type>
</CustomField>