force-app/main/default/objects/Contact/fields/sffr_Do_not_thanks__c.field-meta.xml
<CustomField>
    <fullName>sffr_Do_not_thanks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not thanks</label>
    <type>Checkbox</type>
</CustomField>