force-app/main/default/objects/Contact/fields/sffr_GDPR_Status__c.field-meta.xml
<CustomField>
    <fullName>sffr_GDPR_Status__c</fullName>
    <label>GDPR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>To be anonymized</fullName>
            </value>
            <value>
                <fullName>Anonymized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>