force-app/main/default/objects/Contact/fields/sffr_No_tax_receipt__c.field-meta.xml
<CustomField>
    <fullName>sffr_No_tax_receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No tax receipt</label>
    <type>Checkbox</type>
</CustomField>