force-app/main/default/objects/Contact/fields/sffr_Number_Yearly_Marketing__c.field-meta.xml
<CustomField>
    <fullName>sffr_Number_Yearly_Marketing__c</fullName>
    <label>Number of yearly marketing solliciation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>npsp__Payment_ACH_Code</valueSetName>
    </valueSet>
</CustomField>