force-app/main/default/objects/Contact/fields/sffr_Retrict_Yearly_Marketing_Sol__c.field-meta.xml
<CustomField>
    <fullName>sffr_Retrict_Yearly_Marketing_Sol__c</fullName>
    <label>Restrict Yearly Solicitation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>