force-app/main/default/objects/Contact/listViews/Org_Contact_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Contact_Hierarchy</fullName>
    <columns>FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Org Contact Hierarchy</label>
</ListView>