force-app/main/default/objects/Contact/listViews/SFFR_All_fr.listView-meta.xml
<ListView>
    <fullName>SFFR_All_fr</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les contacts</label>
</ListView>